# django-block

./: LICENSE  pyproject.toml
src/blog/: admin.py  managers.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: base.html
src/blog/templates/blog/post/: detail.html  list.html
src/django_blog/: settings.py
tests/: test_mock.py
